# Viridian

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LaunchVS.bat  README.md  Setup.bat  SetupSubmodules.bat
.github/workflows/: cmake.yml
Data/: FragmentShader.glsl  Settings.txt  VertexShader.glsl  VertexShader.txt  fragmentShader.txt  platform.tmx
Data/Shaders/: FragmentShader.glsl  VertexShader.glsl
Data/Tilemaps/: Demo.tmx  Platforms.tmx
Scripts/: GenerateVS.bat  SetupDependencies.bat
Source/: Camera.cpp  Camera.hpp  FileUtility.hpp  GLDebugUtility.hpp  GLFWDebugUtility.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  MapLayer.cpp  MapLayer.hpp  Shader.cpp  Shader.hpp  SpriteBatcher.cpp  SpriteBatcher.hpp  Texture.cpp  Texture.hpp  Viridian.cpp
